# cladex

./: .env.example  .gitignore  CHANGELOG.md  CLADEX.cmd  CONTRIBUTING.md  DEVELOPMENT_LOG.md  DONE_ROADMAP.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  metadata.json  package-lock.json  package.json  server.cjs  server.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  security.md
.github/workflows/: ci.yml
backend/: AGENTS.md  MANIFEST.in  README.md  SOUL.md  agent_guardrails.py  api_runner.py  bootstrap_runtime.py  bot.py  cladex.py  claude_backend.py  claude_bot.py  claude_common.py  claude_relay.py  constraints.txt  fix_orchestrator.py  install_plugin.py  pyproject.toml  relay_backend.py  relay_common.py  relay_runtime.py  relayctl.py  review_swarm.py  secret_store.py
backend/.codex-plugin/: plugin.json
backend/discord_codex_relay_plugin/: __init__.py
backend/discord_codex_relay_plugin/bundle/.codex-plugin/: plugin.json
backend/discord_codex_relay_plugin/bundle/skills/workspace-discord-relay/: SKILL.md
backend/discord_codex_relay_plugin/bundle/skills/workspace-discord-relay/agents/: openai.yaml
backend/discord_codex_relay_plugin/bundle/skills/workspace-discord-relay/scripts/: bootstrap.py
backend/docs/: CLAUDE_CHANNELS_EVALUATION.md  CLAUDE_RELAY_ALIGNMENT.md  MODELS_AND_BACKENDS.md
backend/tests/: conftest.py  test_agent_guardrails.py  test_backend.py  test_bot_logic.py  test_cladex.py  test_claude_relay.py  test_fix_orchestrator.py  test_relay_backend.py  test_relayctl.py  test_resource_bounds.py  test_review_swarm.py  test_runtime.py
backend/tests/fixtures/: codex_app_server_schema_summary.json
electron/: main.cjs  main.ts  preload.cjs
scripts/: server-contract-smoke.cjs
src/: App.tsx  App.workflow.test.mjs  index.css
src/components/: CladexBackground.tsx
